completed portfolio about and contact page

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,7 @@
         background-color: rgb(106, 102, 102);
       }
       ::-webkit-scrollbar-track{
-        /* background-color: rgb(201, 202, 202); */
-        background-color: #055959;
+        background-color: rgb(201, 202, 202);
         border-radius: 20px;
       }
     </style>
