--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="ICON.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="my portfolio website"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <title>Harshit Shukla | PORTFOLIO</title>
     <style>
       * {
         margin: 0;
@@ -34,7 +20,7 @@
         min-width: 17rem;
       }
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 10px;
       }
       ::-webkit-scrollbar-thumb{
         background-color: gray;
@@ -73,14 +59,13 @@
       header.style.height = '4rem'
       header.style.backgroundColor = '#f2f2f2';
       var land = document.getElementById('landingpage');
-      if(window.scrollY < 50){
+      if(window.scrollY < 20){
         header.style.backgroundColor = '#46AEA2'
         faIcons.forEach(icon => {
           icon.style.color = '#1D2026';
         })
         header.style.height = '8rem'
       }
-
     }
     </script>
   </body>
